syntax = "proto3";

package protocol.v1;

option go_package = ".;v1";

message Header {
    RequestType requestType = 1;
    bytes requestId = 2;
}

enum RequestType {
    UNKNOWN = 0;
    TRANSACTION = 1;
    // BMESSAGE means a bytes message
    BMESSAGE = 2;
    FILE = 3;
    FILE_BMESSAGE = 4;
}

message Transaction {
    string transactionName = 1;
    bytes transactionID = 2;
}

message FileInfo {
    string name = 1;
    int64 size = 2;
    int32 mode = 3;
    bytes modTime = 4;
    bool isDir = 5;
}
